# spacefinder

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: disk_info.rs  file_ops.rs  lib.rs  main.rs  scanner.rs
src/components/Breadcrumb/: Breadcrumb.tsx
src/components/ContextMenu/: ContextMenu.tsx
src/components/StatusBar/: StatusBar.tsx
src/components/Toolbar/: FilterPanel.tsx  Toolbar.tsx
src/components/Treemap/: Treemap.tsx  TreemapTooltip.tsx
src/hooks/: useKeyboardShortcuts.ts  useScanner.ts  useTreemap.ts
src/store/: appStore.ts
src/types/: fileTree.ts  scanner.ts
src/utils/: colorScale.ts  fileCategories.ts  formatSize.ts
