[package]
name = "spacefinder"
version = "0.1.1"
description = "Disk usage treemap visualizer"
authors = ["skmtkytr"]
edition = "2021"

[lib]
name = "spacefinder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jwalk = "0.8"
sysinfo = "0.32"
trash = "5"
tokio = { version = "1", features = ["full"] }
